# d2r-charactersheet

./: Dockerfile  Makefile  README.md  alembic.ini  class_modifiers.json  classes.py  docker-compose.yaml  pyproject.toml
app/src/: main.py
d2r-charactersheet/resources/character_modifiers/: amazon.json  assassin.json  barbarian.json  druid.json  necromancer.json  paladin.json  sorceress.json
d2r-charactersheet/src/: main.py  settings.py
d2r-charactersheet/src/models/: character.py
